<resources>
    <string name="app_name">NewAdaptiveWeather</string>
    <string name="action_settings">Settings</string>

    <string name="openweathermap_baseurl">http://api.openweathermap.org/data/</string>
    <string name="openweathermap_apikey">6f21fa4c59c346931602e199b942473f</string>

    <string name="googlemapsstatic_baseurl">https://maps.googleapis.com/maps/api/staticmap</string>
    <string name="googlemapsstatic_apikey">AIzaSyALRwA7dWm2QdE2BH14KhXmclr01ETL0rQ</string>

    <string name="no_internet_connection_error">No connection: turn on Cellular/WiFi</string>
    <string name="weather_fetching_success">Weather successfully fetched</string>
    <string name="weather_fetching_failure">Server error: cannot fetch weather</string>
    <string name="background_fetching_failure">Picasso error: cannot fetch background</string>

    <string name="weather_for_location">Weather for:</string>

    <string name="placeholder_string_int">66</string>
    <string name="placeholder_string_float">66.12312</string>
    <string name="placeholder_string_single">superpogodajest</string>
    <string name="placeholder_string_separated">ta pogoda bedzie ekstra</string>

    <string name="temperature_unit_kelvin">K</string>
    <string name="temperature_unit_celsius">°C</string>
    <string name="temperature_unit_fahrenheit">F</string>

    <string name="pressure_text">Pressure:</string>
    <string name="humidity_text">Humidity(%):</string>
    <string name="windspeed_text">Wind speed:</string>
    <string name="winddirection_text">Wind direction:</string>
    <string name="clouds_text">Clouds:</string>
    <string name="rain_text">Rain(3h):</string>
    <string name="snow_text">Snow(3h):</string>
</resources>
