<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_separator_small"
    android:background="@color/app_primary_orange_lighter">

    <ImageView
        android:id="@+id/recycler_item_weather_row_basic_icon"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:src="@drawable/ic_fog"
        android:layout_gravity="center_vertical"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:padding="@dimen/margin_vertical_smaller"
        android:background="@color/app_triadic_purple_lighter_alpha" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="5"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin_half">

        <TextView
            android:id="@+id/recycler_item_weather_row_basic_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_string_single" />

        <TextView
            android:id="@+id/recycler_item_weather_row_basic_shortdesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_string_separated"
            style="@style/app_text_xl" />

        <TextView
            android:id="@+id/recycler_item_weather_row_basic_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_string_separated"
            android:lines="1"
            android:ellipsize="end" />

    </LinearLayout>

    <TextView
        android:id="@+id/recycler_item_weather_row_basic_temperature"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:textSize="@dimen/font_size_bigger"
        android:text="@string/placeholder_string_int"
        android:gravity="center"
        style="@style/app_text_xl" />

</LinearLayout>